terraform/03_rds.tf
# ------------------------------------------------------------------------------
# security group constraining access to RDS instance
# ------------------------------------------------------------------------------


### TODO: Uncommend and define security group
/*
resource "aws_security_group" "rds" { }
*/


### TODO: Uncommend and define RDS subnet
/*
resource "aws_db_subnet_group" "rds" { }
*/

### TODO: Uncommend and define RDS instance - PosgreSQL
/*
resource "aws_db_instance" "rds" { }
*/
